src/test/ui/macros/macro-path-prelude-fail-2.rs
mod m {
    fn check() {
        Result::Ok!(); //~ ERROR fail to resolve non-ident macro path
    }
}

fn main() {}
